--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,5 +14,6 @@
       src="https://quickhelp.com.ng/chat.php"
       style="width: 100%; height: 100%;"
     ></iframe>
+    <div class="camo">QuickHelp</div>
   </div>
 </ion-content>
