--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -32,17 +32,35 @@
 }
 
 .iframe-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.iframe-container .camo {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  background-color: red;
+  background-size: cover;
+  z-index: 1;
+  text-align: center;
+  color: white;
+  font-size: 2em;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-iframe {
-  max-width: 100%;
-  max-height: 100%;
+.iframe-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  border: none;
+  background: transparent;
 }
