--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,21 +1,13 @@
-<ion-menu contentId="main-content">
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>Menu</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <ion-content>
-    <ion-list>
-      <ion-item button (click)="goToPage('home')">Home</ion-item>
-      <ion-item button (click)="goToPage('about')">About</ion-item>
-      <ion-item button (click)="goToPage('how-it-works')">How It Works</ion-item>
-      <ion-item button (click)="goToPage('testimonials')">Testimonials</ion-item>
-      <ion-item button (click)="goToPage('login')">Login</ion-item>
-    </ion-list>
-  </ion-content>
-</ion-menu>
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button menuId="mainMenu"></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Home</ion-title>
+  </ion-toolbar>
+</ion-header>
 
-<ion-content [fullscreen]="true" id="main-content">
+<ion-content [fullscreen]="true">
   <div class="main-container">
     <div class="header-container">
       <div class="logo-container">
