--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,20 +1,3 @@
-<ion-menu contentId="main-content">
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>Menu</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <ion-content>
-    <ion-list>
-      <ion-item button (click)="goToPage('home')">Home</ion-item>
-      <ion-item button (click)="goToPage('about')">About</ion-item>
-      <ion-item button (click)="goToPage('how-it-works')">How It Works</ion-item>
-      <ion-item button (click)="goToPage('testimonials')">Testimonials</ion-item>
-      <ion-item button (click)="goToPage('login')">Login</ion-item>
-    </ion-list>
-  </ion-content>
-</ion-menu>
-
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
@@ -24,7 +7,11 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" id="main-content" class="ion-padding">
+<ion-content class="ion-padding">
+  <ion-item *ngIf="errorMessage" class="error">
+    <p>{{ errorMessage }}</p>
+  </ion-item>
+
   <form (ngSubmit)="onLogin()" #loginForm="ngForm">
     <ion-item>
       <ion-label position="floating">Email</ion-label>
@@ -34,7 +21,9 @@
       <ion-label position="floating">Password</ion-label>
       <ion-input type="password" name="password" [(ngModel)]="password" required></ion-input>
     </ion-item>
-    <ion-button expand="block" type="submit" [disabled]="!loginForm.valid">Login</ion-button>
-    <p *ngIf="errorMessage" class="error">{{ errorMessage }}</p>
+    <ion-button expand="block" type="submit" [disabled]="isLoading">
+      <ion-spinner *ngIf="isLoading"></ion-spinner>
+      <span *ngIf="!isLoading">Login</span>
+    </ion-button>
   </form>
 </ion-content>
